# tscat

./: .coveragerc  .gitignore  CLAUDE.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: codeql.yml  release.yml  test_main.yml  test_pull_requests.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  readme.rst  usage.rst
tests/: Dst_Li2020.xml  __init__.py  invalid-type-votable.xml  migration-db-test.sqlite  missing-required-field-votable.xml  test_api.py  test_catalogue.py  test_db_migration.py  test_event.py  test_filtering.py  test_mypy.py  test_orm.py  test_perf.py  test_tscat.py
tscat/: __init__.py  base.py  filtering.py  import_export.py
tscat/orm_sqlalchemy/: __init__.py  alembic.ini  orm.py
tscat/orm_sqlalchemy/migrations/: README  env.py
tscat/orm_sqlalchemy/migrations/versions/: 0c057a8951ba_initial_migration.py  4a1d43bb9936_migrate_predicates_from_pickle_to_json.py  9a655086fb51_add_rating_field_to_event.py  df61d8f30e7c_migrate_tags_and_products_to_json_arrays.py
