[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core"]

[project]
name = 'tscat'
version = "0.4.3"
description = "A library which stores, loads and filters time-series-events and catalogues."
keywords = ["satellite", "plasma-physics", "nasa-data", "amda", "cdpp", "CDF"]
authors = [
    { name = "Patrick Boettcher", email = "p@yai.se" }
]

maintainers = [
    { name = "Patrick Boettcher", email = "p@yai.se" },
    { name = "Alexis Jeandet", email = "alexis.jeandet@member.fsf.org" }
]

requires-python = ">=3.8"
license = { file = "LICENSE" }
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "alembic",
    "typing_extensions>=3.7",
    'sqlalchemy[mypy]<2,>=1.4.0',
    "appdirs>=1.4.4 ",
    "SQLAlchemy_Utils>=0.37.8",
    'orjson',
    'astropy'
]

[project.optional-dependencies]
test = [
    'flake8',
    'appdirs-stubs',
    "pytest>=4.6.5",
    'pytest',
    'pytest-pep8',
    'pytest-cov',
    'pytest-timeout',
    'ddt'
]
doc = [
    'sphinx',
    'sphinx_rtd_theme',
    'sphinx-autodoc-typehints'
]

[project.urls]
homepage = "https://github.com/SciQLop/tscat"
repository = "https://github.com/SciQLop/tscat"
documentation = "https://github.com/SciQLop/tscat"
