[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "tscat"
version = "0.4.4"
description = "A library which stores, loads and filters time-series-events and catalogues."
keywords = ["satellite", "plasma-physics", "nasa-data", "amda", "cdpp", "CDF"]
authors = [
    { name = "Patrick Boettcher", email = "p@yai.se" }
]

maintainers = [
    { name = "Patrick Boettcher", email = "p@yai.se" },
    { name = "Alexis Jeandet", email = "alexis.jeandet@member.fsf.org" }
]

requires-python = ">=3.10"
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "alembic",
    "typing_extensions>=3.7",
    "sqlalchemy>=2.0",
    "appdirs>=1.4.4",
    "orjson",
    "astropy",
]

[project.optional-dependencies]
test = [
    "flake8",
    "appdirs-stubs",
    "pytest>=4.6.5",
    "pytest-cov",
    "pytest-timeout",
    "ddt",
    "mypy",
]
doc = [
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx-autodoc-typehints",
]

[project.urls]
homepage = "https://github.com/SciQLop/tscat"
repository = "https://github.com/SciQLop/tscat"
documentation = "https://github.com/SciQLop/tscat"

[dependency-groups]
dev = [
    "flake8",
    "appdirs-stubs",
    "pytest>=4.6.5",
    "pytest-cov",
    "pytest-timeout",
    "ddt",
    "mypy",
]
